Changed defaults in User's Guide

--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITESUsersGuide.Rmd
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITESUsersGuide.Rmd
@@ -311,20 +311,22 @@ Each mosquito burns some of its energy reserves on each launch, which may incite
 
 ##### Queue Sugar Bout
 
-A mosquito may enter a starved state as a function of how much energy it has (eg; how much is in its fuel tank).
+A mosquito may enter a starved state as a function of how much energy it has (eg; how much is in its fuel tank). The function has two required arguments: the sugar reserve, $x$, and the total search weight of sugar in the area, $\omega$. The more sugar is around, the more likely a mosquito is to initiate a sugar bout (if $\omega=0$, then a search bout will be necessary): 
 
 ```{r}
-pSugarBout <- function(x,S_sa=15,S_sb=5){
-  (2+S_sb)/(1+S_sb)-exp(S_sa*x)/(S_sb+exp(S_sa*x))
+pSugarBout <- function(x,omega,S_sa=25,S_sb=20,S_w=5,S_p=2){
+  exp(S_sa)/(S_sb*(1+(omega*S_w)^S_p)+exp(S_sa))-exp(S_sa*x)/(S_sb*(1+(omega*S_w)^S_p)+exp(S_sa*x))
 }
 ```
 
 ```{r, fig=TRUE, echo=FALSE}
+
 x=seq(0,1,length.out=100)
-plot(x, pSugarBout(x),type = "l", col ="blue", 
+plot(x, pSugarBout(x,0),type = "l", col ="blue", ylim = c(0,1), 
      xlab= "Energy", 
      ylab = "Probability to enter starved state", 
      main = "Starvation")
+lines(x, pSugarBout(x,1), col = "purple")
 ```
 
 #### Oviposition
@@ -338,7 +340,7 @@ Each mosquito has a baseline probability of surviving, per bout, $p_{base}.$
 Exhaustion is a multiplicative decrease in the probability of survival as a function of how much energy the mosquito has. That is, if survival per bout at baseline is $p_{base}$, then with exhaustion, survival per bout is $p_{base} p_{Exhaustion}(E).$ The function `mbites_pEnergySurvival` is found in MBITES-Survival.R
 
 ```{r}
-pEnergySurvival <- function(x,S_a=20,S_b=10){
+pEnergySurvival <- function(x,S_a=50,S_b=10){
   exp(S_a*x)/(S_b + exp(S_a*x))
 }
 ```
@@ -349,6 +351,7 @@ plot(x, pEnergySurvival(x),type = "l", col ="blue",
      xlab= "Energy", 
      ylab = "Marginal Survival", 
      main = "Exhaustion")
+#lines(x, 1-pSugarBout(x,0), col = "purple")
 ```
 
 ##### Physical Damage (Wing Tattering)
@@ -356,12 +359,13 @@ plot(x, pEnergySurvival(x),type = "l", col ="blue",
 Tattering is a multiplicative decrease in the probability of survival as a function of how much physical damage the mosquito has accrued over its lifespan. That is, if survival per bout at baseline is $p_{base}$, then with phyiscal damage, survival per bout is $p_{base} p_{Physical\,Damage}(D).$ The function `mbites_pTatter` is found in MBITES-Survival.R
 
 ```{r}
-pTatter <- function(x,ttr_a=15,ttr_b=500){
-  (2+ttr_b)/(1+ttr_b) - exp(x*ttr_a)/(ttr_b + exp(x*ttr_a))
-}
+pTatter <- function(x,ttr_a=9,ttr_b=10){
+  (2+exp(ttr_b))/(1+exp(ttr_b)) - exp(x*ttr_a)/(exp(ttr_b) + exp(x*ttr_a))
+} 
 ```
 
 ```{r, fig=TRUE, echo=FALSE}
+
 x=seq(0,1,length.out=100)
 plot(x, pTatter(x),type = "l", col ="blue", 
      xlab= "Physical Damage", 
@@ -374,14 +378,14 @@ plot(x, pTatter(x),type = "l", col ="blue",
 Chemical damage is a multiplicative decrease in the probability of survival as a function of how much chemical damage the mosquito has accrued over its lifespan. That is, if survival per bout at baseline is $p_{base}$, then with chemical damage, survival per bout is $p_{base} p_{Chemical\,Damage}(D).$ The function `mbites_pChem` is found in MBITES-Survival.R
 
 ```{r}
-pChem <- function(x,chm_a=15,chm_b=500){
+pChem <- function(x,chm_a=7.5,chm_b=500){
   (2+chm_b)/(1+chm_b) - exp(x*chm_a)/(chm_b + exp(x*chm_a))
 }
 ```
 
 ```{r, fig=TRUE, echo=FALSE}
 x=seq(0,1,length.out=100)
-plot(x, pTatter(x),type = "l", col ="blue", 
+plot(x, pChem(x),type = "l", col ="blue", 
      xlab= "Chemical Damage", 
      ylab = "Marginal Survival, per Bout", 
      main = "Chemical Damage (insecticide)")
@@ -404,35 +408,6 @@ plot(x, pSenesce(x),type = "l", col ="blue",
      ylab = "Marginal Survival, per Bout", 
      main = "Senescence")
 ```
-
-##### Physical Damage (e.g. Wing Tattering)
-
-```{r, fig=FALSE,echo=FALSE}
-siggyUp=function(x,a=20,b=1.1){
-  (2+b^a)/(1+b^a) - exp((1-x)*a)/(b^a+exp((1-x)*a))
-}
-
-siggyDown=function(x,a=20,b=1.1){
-  (2+b^a)/(1+b^a) - exp(x*a)/(b^a+exp(x*a))
-}
-
-siggyUp=function(x,a=20,b=1.1){
-  (2+b)/(1+b) - exp((1-x)*a)/(b+exp((1-x)*a))
-}
-
-siggyDown=function(x,a=20,b=1.1){
-  (2+b)/(1+b) - exp(x*a)/(b+exp(x*a))
-}
-
-x=seq(0,1,length.out=100)
-plot(x, siggyUp(x),type = "l", col ="blue")
-lines(x, siggyDown(x, a=2, b=.4), lty =2, col = "red")
-lines(x, siggyDown(x),col="red")
-```
-
-
-
-##### Physiological Damage (e.g. Exposure to Insecticides)
 
 #### Pathogens 
 
