--- a/MASH-dev/DavidSmith/mbites2mbdetes.Rmd
+++ b/MASH-dev/DavidSmith/mbites2mbdetes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MBITES / MBDETES formulas for the Length of the Feeding Cycle and Survival through one Feeding Cycle"
+title: "MBITES/MBDETES :: Surivival through / Length of the Feeding Cycle"
 author: "David L Smith"
 date: "6/8/2018"
 output:
@@ -15,48 +15,63 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Under some restricted conditions on waiting times, MBITES is what we would get if we translated MBDETES into a stochastic model, under the Gillespie algorithm. We can, therefore, use MBDETES to compute expectations for MBITES under these same contitions. 
 
-The utility **mbites2mbdetes** outputs state transitions, with outputs denoted as described in the following. The interval between leaving the post-prandial resting state, $R$ can be computed from the state transition probabilities. Let $P_{X,Y}$ denote the probability of making a transition from state $X$ to state $Y$, and $t_{X}$ the average time spent in $X$. 
+The utility **mbites2mbdetes** outputs state transitions, with outputs denoted as described in the following. The interval between leaving the post-prandial resting state, $R$ can be computed from the state transition probabilities. Let $P_{X,Y}$ denote the probability of making a transition from state $X$ to state $Y$, and $t_{X}$ the average time spent in $X$. Note that there is always an implied $P_{X,D}$, a transition to death such that $$\sum_{Y\neq D}P_{X,Y} =1-P_{X,D}.$$ 
 
 ### Without Search 
 
-Ignoring search, for the moment, there are two paths out of $R$: refeeding and egg laying, which happen with probability $P_{R,B}$ and $P_{R,O}$. 
+First, to build up the following derivations in a stepwise fashion, we ignore search. Without search, there are two paths out of $R$: refeeding and egg laying, which happen with probability $P_{R,B}$ and $P_{R,O}$. 
 
 The state transitions from $B$ are $B\rightarrow {B,R,D}$. Since we allow $P_{B,B}$, the overall probability of going from $B$ to $R$ (i.e. rather than die, with probability $P_{B,D} = 1-P_{B,B}-P_{B,R}$) is 
-$$\hat P_{B,R} = \frac{P_{B,R}}{1-P_{B,B}},$$
-with expected waiting time: 
-$$T_{B,R} =\frac{t_B}{1-P_{B,B}}.$$
+$$\hat P_{B,R} = P_{B,R} + P_{B,B} \hat P_{B,R} = \frac{P_{B,R}}{1-P_{B,B}}.$$ We get the rhs of the last "=" by solving for $\hat P_{B,R}$ on the equations to the left of it.  
+The  expected waiting time: 
+$$T_{B,R}\left( P_{B,R} + P_{B,B} \right) = P_{B,R} t_B + P_{B,B} T_{B,R} $$ 
+$$ T_{B,R} = \frac{P_{B,R} t_B}{P_{B,R} + P_{B,B}-P_{B,B}} = t_B.$$
 
 Similarly, the state transitions from $O$ are $B\rightarrow {O,B,D}$, so the overall probability of going from $O$ to $B$ is: 
-$$\hat P_{O,B} = \frac{P_{O,B}}{1-P_{O,O}},$$ 
-with expected waiting time: $$T_{O,B} = \frac{t_O}{1-P_{O,O}}.$$
+$$\hat P_{O,B} = P_{O,B} + P_{O,O} \hat P_{O,B} = \frac{P_{O,B}}{1-P_{O,O}},$$ 
+with expected waiting time: 
 
-So the overall waiting time from $R$ back to $R$ is:
-$$\hat P_{R,R} = P_{R,B} \hat P_{B,R} T_{R,B} + P_{R,O} \hat P_{O,B} \hat P_{B,R} \left(T_{O,B} + T_{R,B}\right)$$
+$$T_{O,B} \left(P_{O,B} + P_{O,O}\right) = P_{O,B} t_O + P_{O,O} T_{O,B}$$
 
-$$\hat P_{R,R} = 
-\frac{P_{R,B}  \left( \frac{P_{R,B}}{1-P_{B,B}} \frac{t_B}{1-P_{B,B}} \right)+ P_{R,O}\frac{P_{O,B}}{1-P_{O,O}} \frac{P_{B,R}}{1-P_{B,B}} \left( \frac{t_O}{1-P_{O,O}} +  \frac{t_B}{1-P_{B,B}}\right)}{P_{R,B}+P_{R,O}}.$$  
+$$T_{O,B} = \frac{t_O}{P_{O,B} + P_{O,O}-P_{O,O}} = t_O.$$
+
+So the probability of surviving from $R$ back to $R$ is:
+$$\hat P_{R,R} = P_{R,B} \hat P_{B,R} + P_{R,O} \hat P_{O,B} \hat P_{B,R}$$
+And expected the waiting time is:
+$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = P_{R,B} \hat P_{B,R} T_{R,B} + P_{R,O} \hat P_{O,B} \hat P_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
+$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = \frac{P_{R,B}}{P_{R,B}+P_{R,O}} \hat P_{B,R} T_{R,B} + \frac{P_{R,O}}{P_{R,B}+P_{R,O}} \hat P_{O,B} \hat P_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
 
 ### With Search
 
 With search, we can consider these same paths from $R$ back to $R$ but with the more complicated problem of having repeated attempts to search before successfully completing an attempt. 
 
 The state transitions from $F$ are  $F\rightarrow {F,B,D}$, and from $B$ are $B\rightarrow {F,B,R,D}$. The overall probability of going from $F$ to $B$ is: 
-$$\hat P_{F,B}= \frac{P_{F,B}}{1-P_{F,F}}$$
+$$\hat P_{F,B}= P_{F,B} + P_{F,F} \hat P_{F,B} = \frac{P_{F,B}}{1-P_{F,F}}$$
 with waiting time: 
-$$T_{F,B} = \frac{t_F}{1-P_{F,F}}$$ 
+$$T_{F,B} \left(P_{F,F} + P_{F,B}\right) = P_{F,B} t_B + P_{B,B} T_{F,B}$$
+$$T_{F,B} = \frac{P_{F,B} t_F}{P_{F,F} + P_{F,B}-P_{F,F}} = t_F$$ 
+
 ```{r}
 hatF2B = function(F2B, F2F){F2B/(1-F2F)}
-TF2B = function(tF, F2F){tF/(1-F2F)}
 ```
 
-The probability of going from $B$ to $R$ is: 
+The overall probability of going from $B$ to $R$ is: 
 $$\hat P_{B,R} = P_{B,R} + \left(P_{B,B} + P_{B,F} \hat P_{F,B} \right) \hat P_{B,R}$$
 
 $$ \hat P_{B,R} = \frac{P_{B,R}}{1-P_{B,B} - P_{B,F} \hat P_{F,B}} = \frac{P_{B,R}}{1-P_{B,B} - \frac{P_{B,F} P_{F,B}}{1-P_{F,F}}} $$
 
 and: 
-$$ T_{B,R} = P_{B,R} t_B + P_{B,B} T_{B,R} + P_{B,F} \hat P_{B,F} \left(T_{B,F} +  T_{B,R} \right) \\ = \frac{P_{B,R}  t_B + P_{B,F} \hat P_{B,F} \left(T_{B,F} +  T_{B,R} \right)}{1-P_{B,B} - P_{B,F} \hat P_{B,F}} 
+$$ 
+T_{B,R} \left( P_{B,R} + P_{B,B}+ P_{B,F} \right)= P_{B,R} t_B + P_{B,B} T_{B,R} + P_{B,F} \hat P_{B,F} \left(t_F +  T_{B,R} \right) 
 $$
+
+
+$$
+T_{B,R} = \frac{P_{B,R}  t_B + P_{B,F} \hat P_{B,F} t_F}{ P_{B,R} + P_{B,B}+ P_{B,F} -P_{B,B} - P_{B,F} \hat P_{F,B}} =  \frac{P_{B,R}  t_B + P_{B,F} \hat P_{B,F} t_F}{ P_{B,R} + P_{B,F}  - P_{B,F} \hat P_{F,B}}
+$$
+
+
+
 
 ```{r}
 hatB2R = function(F2F,F2B,B2F,B2B,B2R){
@@ -64,34 +79,35 @@ hatB2R = function(F2F,F2B,B2F,B2B,B2R){
 }
 
 TB2R = function(tF,tB,F2F,F2B,B2F,B2B,B2R){
-  (B2R*tB + B2F*hatF2B(F2F,F2B)*TF2B(tF,F2F))/
-  (1-B2B-B2F*hatF2B(F2F,F2B))
+  (B2R*tB+B2F*hatF2B(F2F,F2B)*tF)/
+  (B2R+B2F-B2F*hatF2B(F2F,F2B))
 }
 ```
+
 
 Similarly, the state transitions from $L$ are  $L \rightarrow {L,O,D}$, and from $O$ are $B\rightarrow {F,L,O,B,D}$.
 
 The overall probability of going from $L$ to $O$ is:
-$$\hat P_{L,O}= \frac{P_{L,O}}{1-P_{L,L}}$$
+$$\hat P_{L,O}= P_{L,O} + P_{L,L} \hat P_{L,O} = \frac{P_{L,O}}{1-P_{L,L}}$$
 with waiting time: 
-$$T_{L,O} = \frac{t_L}{1-P_{L,L}}$$
+$$T_{L,O} \left(P_{L,O} + P_{O,O}\right)  = P_{L,O}t_L + P_{L,L} T_{L,O} $$ 
+$$T_{L,O} = \frac{t_L}{P_{L,O} + P_{O,O}-P_{L,L}}=t_L$$
 
 ```{r}
 hatL2O = function(L2L, L2O){L2O/(1-L2L)}
-
-TL2O = function(tL, L2L){tL/(1-L2L)}
 ```
 
 The probability of going from $O$ to $F$ or $B$ is:
-$$\hat P_{O,F|B} = P_{O,F} + P_{O,B} + \left(P_{O,O} + P_{O,L} \hat P_{L,O} \right) \left( \hat P_{O,F|B} \right)$$
+$$\hat P_{O,F|B} = P_{O,F} + P_{O,B} + \left(P_{O,O} + P_{O,L} \hat P_{L,O} \right) \hat P_{O,F|B} $$
 
 
 
 $$ \hat P_{O,F|B} = \frac{P_{O,F}+ P_{O,B}}{1-P_{O,O} - P_{O,L} P_{L,O}} \\= \frac{ P_{O,F} + P_{O,B}}{1-P_{O,O} -  \frac{P_{O,L} P_{L,O}}{1-P_{L,L}}} $$
 
 and: 
-$$ T_{O,F|B} = \left( P_{O,F} + P_{O,B} \right) t_O + P_{O,O} T_{O,F|B} + P_{O,L} \hat P_{L,O} \left(T_{O,L} + T_{O,F|B} \right)
-\\= \frac{\left( P_{O,F} + P_{O,B} \right) t_O + P_{O,L} \hat P_{O,L} T_{O,L}}{1-P_{O,O} - P_{O,L} \hat P_{O,L}}
+$$ T_{O,F|B} \left( P_{O,F} + P_{O,B} + P_{O,O} + P_{O,L}\right) = \left( P_{O,F} + P_{O,B} \right) t_O + P_{O,O} T_{O,F|B} + P_{O,L} \hat P_{L,O} \left(t_L + T_{O,F|B} \right)$$
+
+$$ T_{O,F|B}= \frac{\left( P_{O,F} + P_{O,B} \right) t_O + P_{O,L} \hat P_{O,L} t_L}{P_{O,F} + P_{O,B}  + P_{O,L} - P_{O,L} \hat P_{O,L}}
 $$
 
 ```{r}
@@ -104,13 +120,13 @@ hatO2B = function(L2L,L2O,O2F,O2L,O2O){
 }
 
 TO2F = function(tF,tO,L2L,L2O,O2F,O2L,O2O){
-  (O2F*tO + O2L*hatL2O(L2L,L2O)*TL2O(tL,L2L))/
-  (1-O2O-O2L*hatL2O(L2L,L2O))
+  (O2F*tO + O2L*hatL2O(L2L,L2O)*tL)/
+  (O2F+O2B+O2L-O2L*hatL2O(L2L,L2O))
 }
 
 TO2B = function(tF,tO,O2B,O2O,O2F,F2O,F2F){
-  (O2B*tO + O2L*hatL2O(L2L,L2O)*TL2O(tL,L2L))/
-   (1-O2O-O2L*hatL2O(L2L,L2O))
+  (O2B*tO + O2L*hatL2O(L2L,L2O)*tL)/
+   (O2F+O2B+O2L-O2L*hatL2O(L2L,L2O))
 }
 ```
 
@@ -128,7 +144,7 @@ hatF2R = function(F2B,F2F,B2F,B2B,B2R){
 } 
 
 TF2R = function(tF,tB,F2B,F2F,B2F,B2B,B2R){
-  TF2B(tF,F2B,F2F) + TR2B(tF,tB,F2B,F2F,B2F,B2B,B2R)
+  tF + TR2B(tF,tB,F2B,F2F,B2F,B2B,B2R)
 }
 
 hatO2R = function(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
@@ -137,12 +153,13 @@ hatO2R = function(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
 }
 
 TO2R = function(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
-  O2F*(TO2F(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O) +TF2R(tF,tB,F2B,F2F,B2F,B2B,B2R)) 
-  O2B*(TO2B(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O) +TB2R(tF,tB,F2B,F2F,B2F,B2B,B2R))
+  (hatO2F*(TO2F(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O)+TF2R(tF,tB,F2B,F2F,B2F,B2B,B2R))+ 
+  hatO2B*(TO2B(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O)+TB2R(tF,tB,F2B,F2F,B2F,B2B,B2R)))/
+  (hatO2F+hatO2B)
 }
 
 TL2R = function(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
-  TL2O(tL,L2L) + TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
+  tL+TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
 }
 
 hatR2R = function(F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
@@ -152,12 +169,13 @@ hatR2R = function(F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
   R2O*hatO2R(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
 }
 
-hatR2R = function(tF,tB,tR,tO,tL,F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
-  tR + 
+TR2R = function(tF,tB,tR,tO,tL,F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
+  (tR + 
   R2F*TF2R(tF,tB,F2B,F2F,B2F,B2B,B2R)+
   R2B*TB2R(tF,tB,F2B,F2F,B2F,B2B,B2R)+
-  R2F*TF2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)+
-  R2O*TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
+  R2L*TL2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)+
+  R2O*TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O))/ 
+  (R2F+R2B+R2L+R2O) 
 }
 ```
 
