--- a/MASH-dev/DavidSmith/states2bionomics.Rmd
+++ b/MASH-dev/DavidSmith/states2bionomics.Rmd
@@ -4,6 +4,10 @@ author: "David L Smith"
 date: "6/8/2018"
 output:
   pdf_document: default
+  html_document:
+    df_print: paged
+ouTut:
+  pdf_document: default
   html_document: default
 ---
 
@@ -15,168 +19,260 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Under some restricted conditions on waiting times, MBITES is what we would get if we translated MBDETES into a stochastic model, under the Gillespie algorithm. We can, therefore, use MBDETES to compute expectations for MBITES under these same contitions. 
 
-The utility **mbites2mbdetes** outputs state transitions, with outputs denoted as described in the following. The interval between leaving the post-prandial resting state, $R$ can be computed from the state transition probabilities. Let $P_{X,Y}$ denote the probability of making a transition from state $X$ to state $Y$, and $t_{X}$ the average time spent in $X$. Note that there is always an implied $P_{X,D}$, a transition to death such that $$\sum_{Y\neq D}P_{X,Y} =1-P_{X,D}.$$ 
+The utility **mbites2mbdetes** ouTuts state transitions, with ouTuts denoted as described in the following. The interval between leaving the post-prandial resting state, $R$ can be computed from the state transition probabilities. Let $P_{X,Y}$ denote the probability of making a transition from state $X$ to state $Y$ after one bout, and $T_{X}$ the average time spent in a bout of type $X$. Note that there is always an implied $P_{X,D}$, a transition to death such that $$\sum_{Y\neq D}P_{X,Y} =1-P_{X,D}.$$ 
+
+Since there is the probability of repeating a state, we must compute the probability of making a transition out of the state and ending up alive and in a new state. We let this quantity be $\Psi_{X,Y}$.
+
+
+```{r, echo=FALSE}
+PAR = list(
+  # Waiting Times
+tF = 1/2/24, # 30 minutes
+tB = 3/24,   # 3 hours
+tR = 18/24,  # 18 hours
+tL = 1/2/24, # 30 minutes
+tO = 1/24,   # 1 hour
+
+# Transitions out of F 
+P_FF = .05,
+P_FB = .93,
+
+# Transitions out of B 
+P_BF = .1,
+P_BB = .1, 
+P_BR = .75,
+
+#Transitions out of L 
+P_LL = .05,
+P_LO = .93,
+
+#Transitions out of O 
+P_OL = .1,
+P_OO = .1,
+P_OB = .4,
+P_OF = .35,
+
+#Transitions out of R
+P_RF = .05,
+P_RB = .2,
+P_RL = .4,
+P_RO = .35
+) 
+```
 
 ### Without Search 
 
 First, to build up the following derivations in a stepwise fashion, we ignore search. Without search, there are two paths out of $R$: refeeding and egg laying, which happen with probability $P_{R,B}$ and $P_{R,O}$. 
 
+#### *Transitions from B to R*
+
 The state transitions from $B$ are $B\rightarrow {B,R,D}$. Since we allow $P_{B,B}$, the overall probability of going from $B$ to $R$ (i.e. rather than die, with probability $P_{B,D} = 1-P_{B,B}-P_{B,R}$) is 
-$$\hat P_{B,R} = P_{B,R} + P_{B,B} \hat P_{B,R} = \frac{P_{B,R}}{1-P_{B,B}}.$$ We get the rhs of the last "=" by solving for $\hat P_{B,R}$ on the equations to the left of it.  
-The  expected waiting time: 
-$$T_{B,R}\left( P_{B,R} + P_{B,B} \right) = P_{B,R} t_B + P_{B,B} T_{B,R} $$ 
-$$ T_{B,R} = \frac{P_{B,R} t_B}{P_{B,R} + P_{B,B}-P_{B,B}} = t_B.$$
+$$
+\Psi_{B,R} = P_{B,R} + P_{B,B} P_{B,R} + P_{B,B}^2 P_{B,R} + \ldots = P_{B,R} + P_{B,B} \Psi_{B,R} = \frac{P_{B,R}}{1-P_{B,B}}.
+$$ 
+
+Note that there are two ways to solve this to get the formula on the right hand side. The first is by summing the infinite series, and the second is by solving for $\Psi_{B,R}$. 
+
+The expected waiting time, conditioned on surviving to make a transition to another behavioral state, is: 
+$$T_{B,R}\left( P_{B,R} + P_{B,B} \right) = P_{B,R} T_B + P_{B,B} T_{B,R} $$ 
+$$ T_{B,R} = \frac{P_{B,R} T_B}{P_{B,R} + P_{B,B}-P_{B,B}} = T_B.$$
+
+#### *Transitions from O to R*
 
 Similarly, the state transitions from $O$ are $B\rightarrow {O,B,D}$, so the overall probability of going from $O$ to $B$ is: 
-$$\hat P_{O,B} = P_{O,B} + P_{O,O} \hat P_{O,B} = \frac{P_{O,B}}{1-P_{O,O}},$$ 
+$$\Psi_{O,B} = P_{O,B} + P_{O,O} \Psi_{O,B} = \frac{P_{O,B}}{1-P_{O,O}},$$ 
 with expected waiting time: 
 
-$$T_{O,B} \left(P_{O,B} + P_{O,O}\right) = P_{O,B} t_O + P_{O,O} T_{O,B}$$
+$$T_{O,B} \left(P_{O,B} + P_{O,O}\right) = P_{O,B} T_O + P_{O,O} T_{O,B}$$
 
-$$T_{O,B} = \frac{t_O}{P_{O,B} + P_{O,O}-P_{O,O}} = t_O.$$
+$$T_{O,B} = \frac{T_O}{P_{O,B} + P_{O,O}-P_{O,O}} = T_O.$$
 
 So the probability of surviving from $R$ back to $R$ is:
-$$\hat P_{R,R} = P_{R,B} \hat P_{B,R} + P_{R,O} \hat P_{O,B} \hat P_{B,R}$$
+$$\Psi_{R,R} = P_{R,B} \Psi_{B,R} + P_{R,O} \Psi_{O,B} \Psi_{B,R}$$
 And expected the waiting time is:
-$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = P_{R,B} \hat P_{B,R} T_{R,B} + P_{R,O} \hat P_{O,B} \hat P_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
-$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = \frac{P_{R,B}}{P_{R,B}+P_{R,O}} \hat P_{B,R} T_{R,B} + \frac{P_{R,O}}{P_{R,B}+P_{R,O}} \hat P_{O,B} \hat P_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
+$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = P_{R,B} \Psi_{B,R} T_{R,B} + P_{R,O} \Psi_{O,B} \Psi_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
+$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = \frac{P_{R,B}}{P_{R,B}+P_{R,O}} \Psi_{B,R} T_{R,B} + \frac{P_{R,O}}{P_{R,B}+P_{R,O}} \Psi_{O,B} \Psi_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
 
 ### With Search
 
-With search, we can consider these same paths from $R$ back to $R$ but with the more complicated problem of having repeated attempts to search before successfully completing an attempt. 
+With search, we can consider these same paths from $R$ back to $R$ but with the more complicated problem of having repeated attempts to search before successfully completing an attempt.
 
-The state transitions from $F$ are  $F\rightarrow {F,B,D}$, and from $B$ are $B\rightarrow {F,B,R,D}$. The overall probability of going from $F$ to $B$ is: 
-$$\hat P_{F,B}= P_{F,B} + P_{F,F} \hat P_{F,B} = \frac{P_{F,B}}{1-P_{F,F}}$$
-with waiting time: 
-$$T_{F,B} \left(P_{F,F} + P_{F,B}\right) = P_{F,B} t_B + P_{B,B} T_{F,B}$$
-$$T_{F,B} = \frac{P_{F,B} t_F}{P_{F,F} + P_{F,B}-P_{F,F}} = t_F$$ 
+#### *Transitions from F to B*
 
+The state transitions from $F$ are $F\rightarrow {F,B,D}$,  The overall probability of going from $F$ to $B$ is: 
+$$\Psi_{F,B}= P_{F,B} + P_{F,F} \Psi_{F,B} = \frac{P_{F,B}}{1-P_{F,F}}$$
 ```{r}
-hatF2B = function(F2B, F2F){F2B/(1-F2F)}
+Psi_FB = function(PAR){with(PAR,{P_FB/(1-P_FF)})} 
 ```
 
-The overall probability of going from $B$ to $R$ is: 
-$$\hat P_{B,R} = P_{B,R} + \left(P_{B,B} + P_{B,F} \hat P_{F,B} \right) \hat P_{B,R}$$
+The waiting time is:
+$$T_{F,B} =  T_F + P_{F,F} T_{F,B} = \frac{T_F}{1-P_{F,F}}$$
 
-$$ \hat P_{B,R} = \frac{P_{B,R}}{1-P_{B,B} - P_{B,F} \hat P_{F,B}} = \frac{P_{B,R}}{1-P_{B,B} - \frac{P_{B,F} P_{F,B}}{1-P_{F,F}}} $$
+```{r}
+T_FB = function(PAR){with(PAR,{tF/(1-P_FF)})} 
+```
+
+#### *Transitions from B to R*
+
+The transitions from  $B$ are $B\rightarrow {F,B,R,D}$.
+The overall probability of going from $B$ to $R$ is: 
+$$\Psi_{B,R} = P_{B,R} + \left(P_{B,B} + P_{B,F} \Psi_{F,B} \right) \Psi_{B,R}$$
+
+which gives us:
+
+$$ \Psi_{B,R} = \frac{P_{B,R}}{1-P_{B,B} - P_{B,F} \Psi_{F,B}} $$
+
+
+
+
+```{r}
+Psi_BR = function(PAR){with(PAR,{
+  P_BR/(1-P_BB-P_BF*Psi_FB(PAR))
+})}
+```
 
 and: 
 $$ 
-T_{B,R} \left( P_{B,R} + P_{B,B}+ P_{B,F} \right)= P_{B,R} t_B + P_{B,B} T_{B,R} + P_{B,F} \hat P_{B,F} \left(t_F +  T_{B,R} \right) 
+T_{B,R} = T_B + P_{B,B} T_{B,R} + P_{B,F} \Psi_{F,B} \left(T_{F,B} +  T_{B,R} \right) =  \frac{T_B +  P_{B,F} \Psi_{F,B} T_{F,B}}{1-P_{B,B} - P_{B,F} \Psi_{F,B}}
 $$
-
-
-$$
-T_{B,R} = \frac{P_{B,R}  t_B + P_{B,F} \hat P_{B,F} t_F}{ P_{B,R} + P_{B,B}+ P_{B,F} -P_{B,B} - P_{B,F} \hat P_{F,B}} =  \frac{P_{B,R}  t_B + P_{B,F} \hat P_{B,F} t_F}{ P_{B,R} + P_{B,F}  - P_{B,F} \hat P_{F,B}}
-$$
-
-
 
 
 ```{r}
-hatB2R = function(F2F,F2B,B2F,B2B,B2R){
-  B2R/(1-B2B-B2F*hatF2B(F2F,F2B))
-}
-
-TB2R = function(tF,tB,F2F,F2B,B2F,B2B,B2R){
-  (B2R*tB+B2F*hatF2B(F2F,F2B)*tF)/
-  (B2R+B2F-B2F*hatF2B(F2F,F2B))
-}
+T_BR = function(PAR){with(PAR,{
+  (tB+P_BF*Psi_FB(PAR)*T_FB(PAR))/(1-P_BB-P_BF*Psi_FB(PAR))
+})}
 ```
 
+#### *Transitions from F to R*
+
+The logic is such that the time from $B$ to $R$ includes the loop back into $F$, so the time from $F$ to $R$ is simply the sum of the two times: 
+```{r}
+T_FR = function(PAR){with(PAR,{
+  T_FB(PAR) + T_BR(PAR)
+})}
+
+T_FR(PAR)
+```
+
+#### *Transitions from L to O*
 
 Similarly, the state transitions from $L$ are  $L \rightarrow {L,O,D}$, and from $O$ are $B\rightarrow {F,L,O,B,D}$.
 
 The overall probability of going from $L$ to $O$ is:
-$$\hat P_{L,O}= P_{L,O} + P_{L,L} \hat P_{L,O} = \frac{P_{L,O}}{1-P_{L,L}}$$
-with waiting time: 
-$$T_{L,O} \left(P_{L,O} + P_{O,O}\right)  = P_{L,O}t_L + P_{L,L} T_{L,O} $$ 
-$$T_{L,O} = \frac{t_L}{P_{L,O} + P_{O,O}-P_{L,L}}=t_L$$
-
-```{r}
-hatL2O = function(L2L, L2O){L2O/(1-L2L)}
-```
-
-The probability of going from $O$ to $F$ or $B$ is:
-$$\hat P_{O,F|B} = P_{O,F} + P_{O,B} + \left(P_{O,O} + P_{O,L} \hat P_{L,O} \right) \hat P_{O,F|B} $$
-
-
-
-$$ \hat P_{O,F|B} = \frac{P_{O,F}+ P_{O,B}}{1-P_{O,O} - P_{O,L} P_{L,O}} \\= \frac{ P_{O,F} + P_{O,B}}{1-P_{O,O} -  \frac{P_{O,L} P_{L,O}}{1-P_{L,L}}} $$
-
-and: 
-$$ T_{O,F|B} \left( P_{O,F} + P_{O,B} + P_{O,O} + P_{O,L}\right) = \left( P_{O,F} + P_{O,B} \right) t_O + P_{O,O} T_{O,F|B} + P_{O,L} \hat P_{L,O} \left(t_L + T_{O,F|B} \right)$$
-
-$$ T_{O,F|B}= \frac{\left( P_{O,F} + P_{O,B} \right) t_O + P_{O,L} \hat P_{O,L} t_L}{P_{O,F} + P_{O,B}  + P_{O,L} - P_{O,L} \hat P_{O,L}}
+$$
+\Psi_{L,O}= P_{L,O} + P_{L,L} \Psi_{L,O} = \frac{P_{L,O}}{1-P_{L,L}}
 $$
 
 ```{r}
-hatO2F = function(L2L,L2O,O2F,O2L,O2O){
-  O2F/(1-O2O-O2L*hatL2O(L2L,L2O))
-}
+Psi_LO = function(PAR){with(PAR,{
+  P_LO/(1-P_LL)
+})}
+```
 
-hatO2B = function(L2L,L2O,O2F,O2L,O2O){
-  O2B/(1-O2O-O2L*hatL2O(L2L,L2O))
-}
+The waiting time is: 
+$$T_{L,O}  = T_L + P_{L,L} T_{L,O} = \frac{T_L}{1-P_{L,L}} $$ 
 
-TO2F = function(tF,tO,L2L,L2O,O2F,O2L,O2O){
-  (O2F*tO + O2L*hatL2O(L2L,L2O)*tL)/
-  (O2F+O2B+O2L-O2L*hatL2O(L2L,L2O))
-}
+```{r}
+T_LO = function(PAR){with(PAR,{
+  tL/(1-P_LL)
+})}
+```
 
-TO2B = function(tF,tO,O2B,O2O,O2F,F2O,F2F){
-  (O2B*tO + O2L*hatL2O(L2L,L2O)*tL)/
-   (O2F+O2B+O2L-O2L*hatL2O(L2L,L2O))
-}
+
+#### *Transitions from O to F/B* 
+
+The probability of going from $O$ to $F$ or $B$ is:
+$$\Psi_{O,F|B} = P_{O,F} + P_{O,B} + \left(P_{O,O} + P_{O,L} \Psi_{L,O} \right) \Psi_{O,F|B} $$
+
+
+$$ \Psi_{O,F|B} = \frac{P_{O,F}+ P_{O,B}}{1-P_{O,O} - P_{O,L} \Psi_{L,O}}.$$
+
+```{r}
+Psi_OF = function(PAR){with(PAR,{
+  P_OF/(1-P_OO-P_OL*Psi_LO(PAR))
+})}
+
+Psi_OB = function(PAR){with(PAR,{
+  P_OB/(1-P_OO-P_OL*Psi_LO(PAR))
+})}
+```
+
+and: 
+$$ 
+T_{O,F|B} = T_O + P_{O,O} T_{O,F|B} + P_{O,L} \Psi_{L,O} \left(T_L + T_{O,F|B} \right)
+$$
+
+$$ 
+T_{O,F|B}= \frac{T_O  + P_{O,L} \Psi_{L,O} T_{L,O}}{1 - P_{O,O} - P_{O,L} \Psi_{L,O}}
+$$
+
+```{r}
+T_OFB = function(PAR){with(PAR,{
+  (tO + P_OL*Psi_LO(PAR)*T_LO(PAR))/(1-P_OO-P_OL*Psi_LO(PAR))
+})}
 ```
 
 ### The Length of a Feeding Cycle
 
-The following formulas make the translation from these formulas to the basic bionomic parameters. Let $1/f$ denote the average duration of a feeding cycle:
-$$1/f= T_{R,R} = \sum_{X \in \left\{F,B,L,O\right\}} P_{R,X} \hat P_{X,R} T_{X,R} $$
 Survival through a full feeding cycle is: 
-$$e^{-g/f} = \hat P_{R,R} = \sum_{X \in \left\{F,B,L,O\right\}} P_{R,X} \hat P_{X,R}$$
+$$\Psi_{R,R} = \sum_{X \neq \left\{R,D\right\}} P_{R,X} \Psi_{X,R}$$
+
+
+```{r}
+Psi_FR = function(PAR){with(PAR,{
+  Psi_FB(PAR)*Psi_BR(PAR)
+})} 
+
+Psi_OR = function(PAR){with(PAR,{
+  Psi_OF(PAR)*Psi_FR(PAR)+Psi_OB(PAR)*Psi_BR(PAR)
+})}
+
+Psi_LR = function(PAR){with(PAR,{
+  Psi_LO(PAR)*Psi_OR(PAR)
+})}
+
+Psi_RR = function(PAR){with(PAR,{
+  P_RF*Psi_FR(PAR)+
+  P_RB*Psi_BR(PAR)+
+  P_RL*Psi_LR(PAR)+
+  P_RO*Psi_OR(PAR)
+})}
+```
+
+
+The average length of a feeding cycle is: 
+$$T_{R,R} = \sum_{X \neq \left\{R,D\right\}} P_{R,X} \Psi_{X,R} T_{X,R} $$
+
+
 
 ```{r}
 
-hatF2R = function(F2B,F2F,B2F,B2B,B2R){
-  hatF2B(F2B,F2F)*hatB2R(F2B,F2F,B2F,B2B,B2R)
-} 
+T_OR = function(PAR){with(PAR,{
+  T_OFB(PAR) + P_OB/(P_OB+P_OF)*T_BR(PAR)+ P_OF/(P_OB+P_OF)*T_FR(PAR)
+})}
 
-TF2R = function(tF,tB,F2B,F2F,B2F,B2B,B2R){
-  tF + TR2B(tF,tB,F2B,F2F,B2F,B2B,B2R)
-}
-
-hatO2R = function(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
-  hatO2F(L2L,L2O,O2F,O2B,O2L,O2O)*hatF2R(F2B,F2F,B2F,B2B,B2R)+ 
-  hatO2B(L2L,L2O,O2F,O2B,O2L,O2O)*hatB2R(F2B,F2F,B2F,B2B,B2R)
-}
-
-TO2R = function(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
-  (hatO2F*(TO2F(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O)+TF2R(tF,tB,F2B,F2F,B2F,B2B,B2R))+ 
-  hatO2B*(TO2B(tO,tL,L2L,L2O,O2F,O2B,O2L,O2O)+TB2R(tF,tB,F2B,F2F,B2F,B2B,B2R)))/
-  (hatO2F+hatO2B)
-}
-
-TL2R = function(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O){
-  tL+TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
-}
-
-hatR2R = function(F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
-  R2F*hatF2R(F2B,F2F,B2F,B2B,B2R)+
-  R2B*hatB2R(F2B,F2F,B2F,B2B,B2R)+
-  R2F*hatF2R(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)+
-  R2O*hatO2R(F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)
-}
-
-TR2R = function(tF,tB,tR,tO,tL,F2B,F2F,B2F,B2B,B2R,R2F,R2B,R2L,R2O,L2L,L2O,O2F,O2B,O2L,O2O){
-  (tR + 
-  R2F*TF2R(tF,tB,F2B,F2F,B2F,B2B,B2R)+
-  R2B*TB2R(tF,tB,F2B,F2F,B2F,B2B,B2R)+
-  R2L*TL2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O)+
-  R2O*TO2R(tF,tB,tO,tL,F2B,F2F,B2F,B2B,B2R,L2L,L2O,O2F,O2B,O2L,O2O))/ 
-  (R2F+R2B+R2L+R2O) 
-}
+T_LR = function(PAR){with(PAR,{
+  T_LO(PAR) + T_OR(PAR)
+})}
 ```
 
+```{r}
+
+T_RR = function(PAR){with(PAR,{
+  (tR +
+  P_RF*T_FR(PAR)+
+  P_RB*T_BR(PAR)+
+  P_RL*T_LR(PAR)+
+  P_RO*T_OR(PAR))
+})}
+```
+
+
+
+We can check this out by giving some reasonable times: 
+
+```{r}
+Psi_RR(PAR)
+T_RR(PAR)
+```
 
