--- a/MASH-dev/DavidSmith/states2bionomics.Rmd
+++ b/MASH-dev/DavidSmith/states2bionomics.Rmd
@@ -23,30 +23,30 @@ Since there is the probability of repeating a state, we must compute the probabi
 ```{r, echo=FALSE}
 PAR = list(
   # Waiting Times
-tF = 1/2/24, # 30 minutes
+tF = 6/24, # 30 minutes
 tB = 3/24,   # 3 hours
 tR = 18/24,  # 18 hours
-tL = 1/2/24, # 30 minutes
-tO = 1/24,   # 1 hour
+tL = 6/24, # 30 minutes
+tO = 3/24,   # 1 hour
 
 # Transitions out of F 
-P_FF = .05,
-P_FB = .93,
+P_FF = .15,
+P_FB = .83,
 
 # Transitions out of B 
-P_BF = .1,
-P_BB = .1, 
+P_BF = .15,
+P_BB = .05, 
 P_BR = .75,
 
 #Transitions out of L 
-P_LL = .05,
-P_LO = .93,
+P_LL = .15,
+P_LO = .83,
 
 #Transitions out of O 
-P_OL = .1,
-P_OO = .1,
-P_OB = .4,
-P_OF = .35,
+P_OL = .15,
+P_OO = .05,
+P_OB = .3,
+P_OF = .45,
 
 #Transitions out of R
 P_RF = .05,
@@ -56,38 +56,6 @@ P_RO = .35
 ) 
 ```
 
-### Without Search 
-
-First, to build up the following derivations in a stepwise fashion, we ignore search. Without search, there are two paths out of $R$: refeeding and egg laying, which happen with probability $P_{R,B}$ and $P_{R,O}$. 
-
-#### *Transitions from B to R*
-
-The state transitions from $B$ are $B\rightarrow {B,R,D}$. Since we allow $P_{B,B}$, the overall probability of going from $B$ to $R$ (i.e. rather than die, with probability $P_{B,D} = 1-P_{B,B}-P_{B,R}$) is 
-$$
-\Psi_{B,R} = P_{B,R} + P_{B,B} P_{B,R} + P_{B,B}^2 P_{B,R} + \ldots = P_{B,R} + P_{B,B} \Psi_{B,R} = \frac{P_{B,R}}{1-P_{B,B}}.
-$$ 
-
-Note that there are two ways to solve this to get the formula on the right hand side. The first is by summing the infinite series, and the second is by solving for $\Psi_{B,R}$. 
-
-The expected waiting time, conditioned on surviving to make a transition to another behavioral state, is: 
-$$T_{B,R}\left( P_{B,R} + P_{B,B} \right) = P_{B,R} T_B + P_{B,B} T_{B,R} $$ 
-$$ T_{B,R} = \frac{P_{B,R} T_B}{P_{B,R} + P_{B,B}-P_{B,B}} = T_B.$$
-
-#### *Transitions from O to R*
-
-Similarly, the state transitions from $O$ are $B\rightarrow {O,B,D}$, so the overall probability of going from $O$ to $B$ is: 
-$$\Psi_{O,B} = P_{O,B} + P_{O,O} \Psi_{O,B} = \frac{P_{O,B}}{1-P_{O,O}},$$ 
-with expected waiting time: 
-
-$$T_{O,B} \left(P_{O,B} + P_{O,O}\right) = P_{O,B} T_O + P_{O,O} T_{O,B}$$
-
-$$T_{O,B} = \frac{T_O}{P_{O,B} + P_{O,O}-P_{O,O}} = T_O.$$
-
-So the probability of surviving from $R$ back to $R$ is:
-$$\Psi_{R,R} = P_{R,B} \Psi_{B,R} + P_{R,O} \Psi_{O,B} \Psi_{B,R}$$
-And expected the waiting time is:
-$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = P_{R,B} \Psi_{B,R} T_{R,B} + P_{R,O} \Psi_{O,B} \Psi_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
-$$T_{R,R} \left( P_{R,B}+P_{R,O} \right) = \frac{P_{R,B}}{P_{R,B}+P_{R,O}} \Psi_{B,R} T_{R,B} + \frac{P_{R,O}}{P_{R,B}+P_{R,O}} \Psi_{O,B} \Psi_{B,R}\left(T_{O,B} +  T_{R,B}\right)$$
 
 ### With Search
 
@@ -147,8 +115,6 @@ The logic is such that the time from $B$ to $R$ includes the loop back into $F$,
 T_FR = function(PAR){with(PAR,{
   T_FB(PAR) + T_BR(PAR)
 })}
-
-T_FR(PAR)
 ```
 
 #### *Transitions from L to O*
@@ -326,14 +292,15 @@ MBDETES_cohort_solve = function(PAR, pF=1, mxT=100, dt=0.001){
   tm = seq(0,mxT,by=dt)
   data.frame(lsoda(inits,tm,MBDETES_cohort_ODE,PAR,atol=1e-10))
 }
-cohort=MBDETES_cohort_solve(PAR)
+cohort=MBDETES_cohort_solve(PAR,dt=0.01)
 tt=cohort[,1]
 alive = rowSums(cohort[,-1])
 
 highSum=-sum(diff(alive)*tt[-1])
 lowSum=-sum(diff(alive)*tt[-length(tt)])
 (lowSum+highSum)/2
+```
 
-
+```{r}
 plot(tt, alive, type = "l")
 ```
