--- a/MASH-dev/DavidSmith/StateTransitions.Rmd
+++ b/MASH-dev/DavidSmith/StateTransitions.Rmd
@@ -18,7 +18,7 @@ mbites_survival <- function(){
 }
 ```
 
-The base survival probability for <code>surviveFlight()</code> is $X_surv$ 
+The base survival probability for <code>surviveFlight()</code> is $X_surv$. 
 
 ## Leave or Stay
 
