--- a/MASH-dev/DavidSmith/states2bionomics.Rmd
+++ b/MASH-dev/DavidSmith/states2bionomics.Rmd
@@ -2,7 +2,8 @@
 title: "From State Transitions and Waiting Times to Bionomics"
 author: "David L Smith"
 date: "6/8/2018"
-output: pdf_document
+output:
+  pdf_document: default
 ouTut:
   pdf_document: default
 ---
@@ -13,12 +14,27 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Background
 
-Under some restricted conditions on waiting times, MBITES is what we would get if we translated MBDETES into a stochastic model, under the Gillespie algorithm. We can, therefore, use MBDETES to compute expectations for MBITES under these same contitions. 
+Under some restricted conditions on waiting times, MBITES is what we would get if we translated MBITES into a stochastic model, under the Gillespie algorithm. We can, therefore, use MBDETES to compute expectations for MBITES under these same contitions. 
 
-The utility **mbites2mbdetes** ouTuts state transitions, with ouTuts denoted as described in the following. The interval between leaving the post-prandial resting state, $R$ can be computed from the state transition probabilities. Let $P_{X,Y}$ denote the probability of making a transition from state $X$ to state $Y$ after one bout, and $T_{X}$ the average time spent in a bout of type $X$. Note that there is always an implied $P_{X,D}$, a transition to death such that $$\sum_{Y\neq D}P_{X,Y} =1-P_{X,D}.$$ 
+The utility **mbites2mbdetes** outputs state transitions as described in the following.
 
-Since there is the probability of repeating a state, we must compute the probability of making a transition out of the state and ending up alive and in a new state. We let this quantity be $\Psi_{X,Y}$.
+* Let $0\leq P_{X,Y}\leq 1$ denote the probability of making a transition from state $X$ to state $Y$ after one bout
+* The probability of dying, $0 \leq P_{X,D} \leq 1$ must satifsy the condition $$\sum_{Y\neq D}P_{X,Y} =1-P_{X,D}.$$
+* Since there is the probability of repeating a state, we must compute the probability of making a transition out of the state and ending up alive and in a new state. We let this quantity be $\Psi_{X,Y}$.
+* Let $T_{X}$ the average time spent in a bout of type $X$. 
+* Let $T_{X,Y}$ denote the expected waiting time to make the transition from $X$ to $Y$. 
 
+In some sense, we can rewrite MBDETES as a conservation equation in the following way: 
+$$\left[ \begin{array}{c}dF/dt \\ dB/dt \\ dR/dt \\ dL/dt \\ dO/dt \\ dD/dt\end{array}\right]= 
+\left[ \begin{array}{ccccc}
+P_{F,F}-1 & P_{F,B} & 0& 0 & 0 & P_{F,D} \\
+P_{B,F} & P_{B,B}-1 & P_{B,R} & 0 &0 & P_{B,D} \\ 
+P_{R,F} & P_{R,B} & -1 & P_{R,L} & P_{R,O}& P_{R,D} \\ 
+0 & 0 & 0 & P_{L,L}-1& P_{L,O} & P_{L,D} \\ 
+P_{O,F} & P_{O,B} & 0 & P_{O,L} & P_{O,O}-1 & P_{O,D} \\ 
+P_{F,D} & P_{B,D} & P_{R,D} & P_{L,D} & P_{O,D} & 0
+\end{array}\right] \left[ \begin{array}{c}F/t_F\\B/t_B\\R/t_R\\L/t_R\\O/t_O \\D   \\ \end{array}\right] 
+$$
 
 ```{r, echo=FALSE}
 PAR = list(
@@ -54,6 +70,18 @@ P_RB = .2,
 P_RL = .4,
 P_RO = .35
 ) 
+
+PARD = function(PAR){with(PAR,{
+  PAR$P_FD = 1-P_FB-P_FF
+  PAR$P_BD = 1-P_BF-P_BB-P_BR
+  PAR$P_RD = 1-P_RF-P_RB-P_RL-P_RO
+  PAR$P_LD = 1-P_LL-P_OO
+  PAR$P_OD = 1-P_OF-P_OB-P_OL-P_OO 
+  PAR
+})}
+
+PAR = PARD(PAR)
+
 ```
 
 
@@ -63,20 +91,29 @@ With search, we can consider these same paths from $R$ back to $R$ but with the 
 
 #### *Transitions from F to B*
 
-The state transitions from $F$ are $F\rightarrow {F,B,D}$,  The overall probability of going from $F$ to $B$ is: 
-$$\Psi_{F,B}= P_{F,B} + P_{F,F} \Psi_{F,B} = \frac{P_{F,B}}{1-P_{F,F}}$$
+The state transitions from $F$ are $F\rightarrow {F,B,D}$,  The overall probability of going from $F$ to $B$ can be computed in two ways. 
+
+One way of deriving the formula is by solving the infinite geometric series. 
+$$\Psi_{F,B} = P_{F,B} + P_{F,F} P_{F,B} + P_{F,F}^2 P_{F,B} + \ldots = \frac{P_{F,B}}{1-P_{F,F}}$$
+
+The other is by simply solving the recursion relationship: 
+$$\Psi_{F,B} = P_{F,B} + P_{F,F} \Psi_{F,B} = \frac{P_{F,B}}{1-P_{F,F}}$$
+While the following derivations can be done in several different ways, we use the second method, in part, because it is more concise.
+
 ```{r}
 Psi_FB = function(PAR){with(PAR,{P_FB/(1-P_FF)})} 
 ```
 
-The waiting time is:
+Similarly, the waiting time is:
 $$T_{F,B} =  T_F + P_{F,F} T_{F,B} = \frac{T_F}{1-P_{F,F}}$$
 
 ```{r}
-T_FB = function(PAR){with(PAR,{tF/(1-P_FF)})} 
-T_FB = function(PAR){with(PAR,{tF/(P_FB/(P_FF+P_FB))})} 
+T_FB = function(PAR){with(PAR,{tF/(1-P_FF)})}
 ```
-
+Similarly, the probability of dying is: 
+$$\Psi_{F,D} = \frac{P_{F,D}}{(1-P_{F,F})}.$$
+The expected waiting time to die is (similarly): 
+$$T_{F,D} = \frac{T_F}{(1-P_{F,F})}.$$
 #### *Transitions from B to R*
 
 The transitions from  $B$ are $B\rightarrow {F,B,R,D}$.
@@ -247,6 +284,7 @@ MBDETES_R2R_ODE = function(t,X,P){with(as.list(c(P,X)),{
   dF = P_RF*R/tR + P_OF*O/tO + P_BF*B/tB - (1-P_FF)*FF/tF
   dB = P_RB*R/tR + P_OB*O/tO + P_FB*FF/tF - (1-P_BB)*B/tB
   dR2 = P_BR*B/tB
+  dD  = P_LD*L/tL + P_OD*O/tO + P_FD*FF/tF + P_FD*B/tB + P_RD*R/tR
   list(c(dR,dL,dO,dF,dB,dR2))
 })}
 
@@ -284,17 +322,21 @@ MBDETES_cohort_ODE = function(t,X,P){with(as.list(c(P,X)),{
   dR = P_BR*B/tB-R/tR
   dL = P_RL*R/tR + P_OL*O/tO - (1-P_LL)*L/tL
   dO = P_RO*R/tR + P_LO*L/tL - (1-P_OO)*O/tO
-  list(c(dF,dB,dR,dL,dO))
+  dOO = (P_OF + P_OB)*O/tO
+  dRR = P_BR*B/tB 
+  list(c(dF,dB,dR,dL,dO,dOO,dRR))
 })}
 
 MBDETES_cohort_solve = function(PAR, pF=1, mxT=100, dt=0.001){
-  inits = c(FF=pF,B=1-pF,R=0,L=0,O=0)
+  inits = c(FF=pF,B=1-pF,R=0,L=0,O=0,OO=0,RR=0)
   tm = seq(0,mxT,by=dt)
   data.frame(lsoda(inits,tm,MBDETES_cohort_ODE,PAR,atol=1e-10))
 }
-cohort=MBDETES_cohort_solve(PAR,dt=0.01)
+cohort=MBDETES_cohort_solve(PAR,pF=.5,dt=0.01)
 tt=cohort[,1]
-alive = rowSums(cohort[,-1])
+alive = rowSums(cohort[,2:6])
+eggs = cohort[,7]
+bloodmeals = cohort[,8]
 
 highSum=-sum(diff(alive)*tt[-1])
 lowSum=-sum(diff(alive)*tt[-length(tt)])
@@ -302,5 +344,10 @@ lowSum=-sum(diff(alive)*tt[-length(tt)])
 ```
 
 ```{r}
-plot(tt, alive, type = "l")
+par(mfrow=c(2,2), mar = c(5,4,2,2))
+plot(tt, alive, type = "l", xlab = "Age (days)", ylab = "Surviving")
+#lines(tt, exp(-tt/9.78), col = "red")
+plot(tt[-1], diff(eggs), col = "blue", type = "l", xlab = "Age (days)", ylab= "Laying Rate")
+plot(tt[-1], diff(bloodmeals), col = "red", type = "l", xlab = "Age (days)", ylab = "Feeding Rate")
+plot(tt_pdf[ix], R2R_pdf[ix], type = "l", xlab = "Time (days)", ylab = "Feeding Cycle Length")
 ```
